[package]
name = "tokio-jsoncodec"
description = "Integration between tokio-codec and serde_json"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]
license = "MIT"
homepage = "https://github.com/ilianaw/tokio-jsoncodec"
repository = "https://github.com/ilianaw/tokio-jsoncodec"
readme = "README.md"

[dependencies]
bytes = "0.4.9"
serde = "1.0.70"
serde_json = "1.0.24"
tokio-codec = "0.1.0"

[dev-dependencies]
tokio = "0.1.7"
maplit = "1.0.1"
